feat: Added image url to response
